--- a/static/hello-world/src/styles.css
+++ b/static/hello-world/src/styles.css
@@ -1,11 +1,20 @@
 /* Main container styles */
 .container {
-
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     color: #172B4D;
     max-width: 1200px;
     margin: 0px;
   }
+
+  .blur {
+    background-color: rgba(111, 106, 106, 0.475);
+    position: absolute;
+    top: 0pv;
+    left: 0px;
+    height: 98vh;
+    width: 100%;
+    z-index: 1;
+}
 
   .targets {
     display: flex;
@@ -90,7 +99,7 @@
   /* Credentials grid */
   .credentials-grid {
     display: flex;
-    width: 100%;
+    width: 98%;
     flex-flow: row wrap;
     gap: 16px;
     background-color: #F4F5F7;
@@ -180,11 +189,18 @@
   }
   
   .modal-content {
-    background: #b1bbce;
+    border-radius: 10px;
+    background-color: white;
+    z-index: 400;
     padding: 24px;
     border-radius: 3px;
+    height: 80vh;
     width: 480px;
     box-shadow: 0 8px 16px rgba(9, 30, 66, 0.25), 0 0 1px rgba(9, 30, 66, 0.31);
+  }
+
+  form {
+    height: 95vh;
   }
   
   .modal-header {
@@ -203,7 +219,7 @@
   
   /* Form styles */
   .form-group {
-    margin-bottom: 16px;
+    margin-bottom: 5px;
     width: 90%;
   }
   
