--- a/static/hello-world/src/styles.css
+++ b/static/hello-world/src/styles.css
@@ -31,6 +31,11 @@
     color: #172B4D;
   }
   
+  .already-exist {
+    color: red;
+    width: 100%;
+  
+  }
   /* Button styles - Jira universal styling */
   button {
     border-radius: 3px;
@@ -66,16 +71,51 @@
     color: white;
   }
   
-  .btn-delete {
-    background-color: #DE350B;
-    color: white;
+
+  .delete-confirmation{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+    visibility: visible;
   }
-  
+
+  .delete-confirmation-hidden {
+    visibility: hidden;
+  }
+
+  .btn-delete{
+    background-color: whitesmoke;
+    color: red;
+    border: 1px solid red;
+  }
+
+  .delete-confirmation {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+  }
+
+  .delete-confirmation label{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #172B4D;
+  }
+
+  .btn-confirm-delete {
+    background-color: whitesmoke;
+    color: red;
+    border: 1px solid red;
+  }
+
   .btn-edit {
     background-color: #0052CC;
     color: white;
   }
   
+
   .btn-secondary {
     background-color: #F4F5F7;
     color: #344563;
@@ -196,17 +236,21 @@
     border-radius: 3px;
     height: 80vh;
     width: 480px;
+    max-height: 95vh;
+    overflow-y: auto;
     box-shadow: 0 8px 16px rgba(9, 30, 66, 0.25), 0 0 1px rgba(9, 30, 66, 0.31);
   }
 
-  form {
+  /* form {
     height: 95vh;
   }
-  
+   */
   .modal-header {
     margin-bottom: 24px;
     display: flex;
-    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
   }
   
   .modal-header h3 {
@@ -214,6 +258,7 @@
     font-weight: 500;
     margin: 0;
     color: #172B4D;
+    text-align: center;
   }
 
   
@@ -266,4 +311,9 @@
     color: #DE350B;
     font-size: 12px;
     margin-top: 4px;
+  }
+
+  .delete-section {
+    margin-bottom: 5px;
+    width: 90%;
   }
