--- a/static/hello-world/src/styles.css
+++ b/static/hello-world/src/styles.css
@@ -232,19 +232,22 @@
     border-radius: 10px;
     background-color: white;
     z-index: 400;
-    padding: 24px;
+    padding: 20px;
+
     border-radius: 3px;
-    height: 80vh;
-    width: 480px;
-    max-height: 95vh;
+    max-height: 75vh;
+    width: 478px;
+  
     overflow-y: auto;
     box-shadow: 0 8px 16px rgba(9, 30, 66, 0.25), 0 0 1px rgba(9, 30, 66, 0.31);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  
   }
 
-  /* form {
-    height: 95vh;
-  }
-   */
+  
   .modal-header {
     margin-bottom: 24px;
     display: flex;
@@ -263,10 +266,31 @@
 
   
   /* Form styles */
-  .form-group {
-    margin-bottom: 5px;
+  form{
+    display: flex;
+    flex-direction: column;
+    
+  
+  }
+  .form-element{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     width: 90%;
   }
+  .form-group {
+    margin-bottom: 20px;
+    width: 42%;
+  }
+
+    .example-url {
+      font-size: 12px;
+      color: gray;
+      width: 92%;
+    }
+    
   
   .form-group label {
     display: block;
@@ -300,8 +324,10 @@
     border-color: #DE350B;
   }
   
+  
   .form-actions {
     margin-top: 24px;
+    width: 98%;
     display: flex;
     justify-content: space-between;
   }
